@@ -55,6 +55,7 @@ Post-v2.6.0
        which set the number of rx and tx descriptors to use for the given port.
      * Support for DPDK v16.11.
      * Support for rx checksum offload. Refer DPDK HOWTO for details.
+     * Port Hotplug is now supported.
    - Fedora packaging:
      * A package upgrade does not automatically restart OVS service.
    - ovs-vswitchd/ovs-vsctl:
